--- a/main.html
+++ b/main.html
@@ -10,40 +10,40 @@
 
 <body>
 
-
-
-    <table id="table">
+    <table class="BooksCollection">
         <thead>
             <tr>
                 <th>Название</th>
                 <th>Автор</th>
                 <th>Кол-во символов</th>
                 <th>Статус</th>
+
             </tr>
+
         </thead>
     </table>
-    <script src="index.js"></script>
 
-    <form name="formAddBook">
-        <table id="form-table">
+
+    <form class="formAddBook">
+        <table class="form-table">
             <tr>
                 <td><label for="text">Название</label></td>
-                <td><input name="NameBook" type="text" required id="input1"></td>
+                <td><input name="NameBook" type="text" required class="Input1"></td>
             </tr>
             <tr>
                 <td><label for="text">Автор</label></td>
-                <td><input type="text" required id="input2"></td>
+                <td><input type="text" required name="Autor" class="Input2"></td>
             </tr>
             <tr>
                 <td><label for="text">Кол-во символов</label></td>
-                <td><input type="text" required id="input3"></td>
+                <td><input type="text" required name="CountSymbol" class="Input3"></td>
             </tr>
             <tr>
                 <td><label for="status">Статус</label></td>
-                <td><select name="status" id="status">
-                        <option value="perm">Не начато</option>
-                        <option value="">В процессе</option>
-                        <option value="samara">Прочитано</option>
+                <td><select name="status" class="status">
+                        <option value="Не начато">Не начато</option>
+                        <option value="В процессе">В процессе</option>
+                        <option value="Прочитано">Прочитано</option>
                     </select>
                 </td>
             </tr>
@@ -52,25 +52,11 @@
         <button type="button">
             Закрыть
         </button>
-        <button type="submit" id="save">
+        <button type="submit" class="Save">
             Добавить
         </button>
     </form>
 
-    <form name="my">
-        <input name="one" value="1">
-        <input name="two" value="2">
-    </form>
 
-    <script>
-        // получаем форму
-        let form = document.forms.my; // <form name="my"> element
-
-        // получаем элемент
-        let elem = form.elements.one; // <input name="one"> element
-
-        alert(elem.value); // 1
-    </script>
-
-
+    <script src="index.js"></script>
 </body>
