--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
                 <th>Автор</th>
                 <th>Кол-во символов</th>
                 <th>Статус</th>
-
+                <th class="th__delete"></th>
             </tr>
 
         </thead>
@@ -49,8 +49,8 @@
             </tr>
         </table>
 
-        <button type="new-book-form__button_close">
-            Закрыть
+        <button type="reset" class="new-book-form__button_close">
+            Очистить
         </button>
         <button type="submit" class="new-book-form__button_submit">
             Добавить
