--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
             </tr>
             <tr>
                 <td><label for="new-book-form__status">Статус</label></td>
-                <td><select name="status-select" class="status-select">
+                <td><select name="status-select__add" class="status-select__add">
                         <option value="status-select__not-started">Не начато</option>
                         <option value="status-select__in-progress">В процессе</option>
                         <option value="status-select__read">Прочитано</option>
